cursor problem solved for apearing on mobile devices, but there's and overflow issue that refused to be solved, and the font import is commented out for testing on my phone via same-network and IP address, up next Overflow issue 😒😑

--- a/index.scss
+++ b/index.scss
@@ -1,7 +1,7 @@
 //=============================
 // ## imports
 //=============================
-@import url("https://fonts.googleapis.com/css2?family=Karla:wght@400;600;700;800&family=Poppins:wght@400;600;700&display=swap");
+// @import url("https://fonts.googleapis.com/css2?family=Karla:wght@400;600;700;800&family=Poppins:wght@400;600;700&display=swap");
 
 @import "./scss/variables";
 @import "./scss/cursor";
@@ -49,12 +49,14 @@ section {
 // ======================================================
 
 body {
+  max-width: 100vw;
   overflow-x: hidden;
   background: $gray-300;
 }
 
 .wrapper {
   width: 100%;
+  overflow-x: hidden;
 
   // ======================================================
   //  HEADER
@@ -65,7 +67,7 @@ body {
     position: absolute;
     width: 100%;
 
-    z-index: 10;
+    z-index: 5;
 
     .content {
       display: flex;
@@ -92,7 +94,6 @@ body {
 
         @media only screen and (max-width: 850px) {
           flex: 1;
-          display: none;
         }
 
         img {
@@ -120,7 +121,7 @@ body {
           right: -100%;
           top: 0;
 
-          padding: 5rem 1rem;
+          padding: 10rem 1rem 5rem;
 
           height: 100vh;
 
@@ -200,7 +201,6 @@ body {
         }
 
         &.open {
-          top: 20%;
           .stroke {
             &:first-of-type {
               background-color: red;
